--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'TL'
 - !lcsh 'Ford automobile -- Handbooks, manuals, etc.'
+- GITenberg
 title: Ford Manual for Owners and Operators of Ford Cars and Trucks (1919)
 url: http://www.gutenberg.org/ebooks/46206
